update .gitignore & .dockerignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 .venv
 **__pycache__
 db.sqlite3
+.DS_Store
+.env
+
+*.py[cod]
+*.pyo
+*.pyd
+*.log
+*.pot
+*.pyc
+*.coverage
+htmlcov/
+*.egg-info/
+dist/
+build/
+
+media/
+staticfiles/
+
+docker-compose.yml
+
+.vscode/
